0.2 (in progress):
    - Changed .tex UTI to agree with TeXShop's.
    - Let the system pick a different plugin if pygmentize fails

0.1: Initial release